laurel_sprout: Enable zram-writeback job
* This patch enables zram-writeback job. It will run idle marking
  at 60m since the device is boot. After that, it will do first
  writeback after 3hour to sweep initiallized cold pages out.
  After that, it periodically write out every 24hour.

Bug: 117682284
Bug: 127185055
Test: confirm with manual testing
Change-Id: I6857c79ca3ce6a3619f4b7e200d7f17a8decd659
Signed-off-by: Hemant Sachdeva <hemant.evolver@gmail.com>

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -1005,4 +1005,7 @@
         <item>10</item>
         <item>8</item>
     </integer-array>
+
+    <!-- Enable Zram writeback feature to allow unused pages in zram be written to flash. -->
+    <bool name="config_zramWriteback">true</bool>
 </resources>
