--- a/overlay/packages/apps/Settings/res/values/config.xml
+++ b/overlay/packages/apps/Settings/res/values/config.xml
@@ -26,4 +26,7 @@
 
      <!-- Screen off FOD -->
     <bool name="config_supportScreenOffFod">true</bool>
+
+    <!-- Adaptive Charging -->
+    <bool name="config_supportAdaptiveCharging">true</bool>
 </resources>
