laurel_sprout: Set status bar padding
* Fixes status bar icons cutting out from the corners

Signed-off-by: Hemant Sachdeva <hemant.evolver@gmail.com>

--- a/overlay/frameworks/base/packages/SystemUI/res/values/dimens.xml
+++ b/overlay/frameworks/base/packages/SystemUI/res/values/dimens.xml
@@ -22,4 +22,7 @@
      <!-- Bottom margin for fod animation -->
      <dimen name="fod_animation_offset_x">62dp</dimen>
      <dimen name="fod_animation_offset_y">62dp</dimen>
+
+     <!-- Padding around the status bar -->
+    <dimen name="rounded_corner_content_padding">10dp</dimen>
  </resources>
