--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -1001,4 +1001,19 @@
          3 = Yellow
     -->
     <integer name="config_fod_pressed_color">0</integer>
+
+    <!-- The properties of a UDFPS sensor in pixels, in the order listed below: -->
+    <integer-array name="config_udfps_sensor_props" translatable="false" >
+     <!--
+       <item>sensorLocationX</item>
+       <item>sensorLocationY</item>
+       <item>sensorRadius</item>
+     -->
+       <item>360</item>
+       <item>1423</item>
+       <item>67</item>
+    </integer-array>
+
+    <!-- How long it takes for the HW to start illuminating after the illumination is requested. -->
+   <integer name="config_udfps_illumination_transition_ms">0</integer>
 </resources>
