--- a/overlay/packages/apps/Settings/res/values/spark_config.xml
+++ b/overlay/packages/apps/Settings/res/values/spark_config.xml
@@ -17,5 +17,8 @@
     <string name="config_batDesCap">/sys/class/power_supply/bms/charge_full_design</string> 
     <string name="config_batCurCap">/sys/class/power_supply/bms/charge_full</string>
     <bool name="config_supportBatteryHealth">true</bool>
+     
+    <!-- Smart Charging -->
+    <bool name="config_supportSmartCharging">true</bool>
 
 </resources>
